[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "diane"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "tzlocal",
    "networkx",
    "pyyaml",
    "typer",
    "sortedcontainers"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
diane = "diane.cli:app"