[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "diane"
version = "0.1.0"
# Project uses PEP 604 union types `(X | Y)` which require Python 3.10+
requires-python = ">=3.10"
dependencies = [
    "tzlocal",
    "networkx",
    "pyyaml",
    "typer",
    "rich",
    "sortedcontainers",
    "plotext",
    "pandas",
    "numpy"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
diane = "diane.cli:app"